<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/Home" />

    <item
        android:id="@+id/navigation_busqueda"
        android:icon="@drawable/ic_busqueda"
        android:title="@string/Busqueda" />

    <item
        android:id="@+id/navigation_deseos"
        android:icon="@drawable/ic_deseos"
        android:title="@string/Deseos" />
    <item
        android:id="@+id/navigation_carrito"
        android:icon="@drawable/ic_carrito"
        android:title="@string/Carrito" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil"
        android:title="@string/Perfil" />




</menu>